<resources>
    <string name="app_name">PracticalTest01Var01</string>
    <string name="navigate_to_secondary_activity">Navigate to second activity</string>
    <string name="east">East</string>
    <string name="west">West</string>
    <string name="south">South</string>
    <string name="north">North</string>
    <string name="title_activity_practical_test01_var01_secondary">
        PracticalTest01Var01SecondaryActivity
    </string>
    <string name="cancelButton">Cancel</string>
    <string name="register">Register</string>

</resources>
